# legal-rag-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
evaluation/: __init__.py  core.py  run_ragas.py
evaluation/benchmarks/: reference_qa.jsonl
evaluation/reports/: rostrud_batch_human_review_1.csv  rostrud_batch_human_review_2.csv  rostrud_batch_human_review_3.csv
knowledge_base/tkrf/: tkrf.md
scripts/: batch_eval_rostrud.py  eval_ragas.py  fetch_rostrud_faq.py  index_knowledge.py  run_bot.py  validate_human_review.py
src/: __init__.py  main.py
src/agent/: __init__.py  answer_verifier.py  json_llm.py  legal_query_agent.py  rule_based_verifier.py  schemas.py
src/api/: __init__.py  auth.py  dependencies.py
src/bot/: __init__.py  bot.py  handlers.py  keyboards.py
src/core/: __init__.py  config.py  logging_config.py
src/db/: interaction_logs.py  pool.py
src/dialog/: __init__.py  orchestrator.py  safety_gate.py
src/infra/: __init__.py  cache.py  rate_limit.py
src/knowledge/: __init__.py  chunker.py  indexer.py  ingester.py  metadata.py  rostrud_faq_parser.py
src/llm/: __init__.py  deepseek_llm.py  openrouter_llm.py
src/models/: __init__.py  query.py  response.py
src/rag/: __init__.py  candidate_snapshot.py  context_builder.py  context_format.py  dense_retriever.py  explicit_hybrid_retriever.py  faq_context.py  generator.py  pipeline.py  pipeline_steps.py  query_rewriter.py  reranker.py  retrieval_policy.py  retriever.py  rrf.py  source_format.py  sparse_retriever.py
(+115 files in other folders)
